# binaural-beats-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
beats_generator/: __init__.py  cli.py  presets.py  recommended.py  reference_similarity.py  test_pack.py  verify.py
beats_generator/generators/: __init__.py  backgrounds.py  binaural.py  filters.py
